Bugfix/ktiosudb 5844 word cutoff (#464)
* fix word-wrap, rearrange system sections

* remove word-wrap

--- a/src/app/shared/components/paragraph/paragraph.component.scss
+++ b/src/app/shared/components/paragraph/paragraph.component.scss
@@ -65,7 +65,6 @@
 /* expand content to its full length on mouseover */
 .might-overflow:hover {
   text-overflow: clip;
-  word-break: break-all;
   white-space: normal;
 }
 
